Try custom links

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Spotify Synchronizer
+description: This is the official info page for the Spotify Synchronizer Twitch plugin.
